--- a/index.html
+++ b/index.html
@@ -1,35 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Profile card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Victor Crest
-  26
-  London
+    <title>Frontend Mentor | Profile card component</title>
+  </head>
 
-  80K
-  Followers
+  <body>
+    <main>
+      <!-- CARD -->
+      <div class="card text-center">
+        <div class="card-top">
+          <img
+            class="avatar"
+            src="./images/image-victor.jpg"
+            alt="profil picture"
+          />
+        </div>
+        <div class="card-middle">
+          <div class="row">
+            <h1 class="bold">Victor Crest</h1>
+            <span class="age">26</span>
+          </div>
+          <span class="city">London</span>
+        </div>
+        <div class="card-bottom row">
+          <div class="col">
+            <span class="bold">80K</span>
+            <p>Followers</p>
+          </div>
+          <div class="col">
+            <span class="bold">803K</span>
+            <p>Likes</p>
+          </div>
+          <div class="col">
+            <span class="bold">1.4K</span>
+            <p>Photos</p>
+          </div>
+        </div>
+      </div>
 
-  803K
-  Likes
+      <!-- BUBBLE DESIGN -->
+      <div class="bubble bubble-top"></div>
+      <div class="bubble bubble-bottom"></div>
+    </main>
 
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <footer>
+      <div class="attribution">
+        <span>Challenge by</span>
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+          <span>Frontend Mentor</span>
+        </a>
+        <span>. Coded by</span>
+        <a href="https://github.com/Alexis-Pannetier">Alexis Pannetier</a>.
+      </div>
+    </footer>
+  </body>
 </html>
