--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
     <footer>
       <div class="attribution">
         <span>Challenge by</span>
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+        <a
+          href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ"
+          target="_blank"
+        >
           <span>Frontend Mentor</span>
         </a>
         <span>. Coded by</span>
